@@ -1,6 +1,8 @@
 SVN
 ---
 
+* [fabien] added configurable suffix by route (with directory and no suffix support) and enforced one URL for one ressource
+* [fabien] dev environment is much more faster
 * [fabien] better debug sidebar
 * [fabien] better i18n support (variable substitution)
 * [fabien] lot a small fixes for Windows users
